--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div >
-    <mat-toolbar [style.backgroundColor]="'blue'" [style.color]="'white'">
+    <mat-toolbar class="navContainer">
         <span><mat-icon>menu</mat-icon></span>
         <a href="/" [style.color]="'white'"><span>Z Bus</span></a>
         
