--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="2">
+<mat-grid-list cols="2" [gutterSize]="'15px'" >
   <a href="/golive"
     ><mat-grid-tile class="grid-tile">
       <img
