--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -3,6 +3,7 @@
     width: 90%;
     border: 2px solid rebeccapurple;
     border-radius: 20px;
+    
 }
 
 .grid-tile img{
@@ -19,4 +20,9 @@
 
 ::ng-deep .grid-tile{
     width: calc((40% - 0.5px) * 1 + 0px);
+}
+::ng-deep mat-grid-list{
+    /* border: 10px solid red; */
+    margin-left: 15px;
+    margin-right: 15px;
 }
