angular Material Select

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="2" [gutterSize]="'15px'" >
+<mat-grid-list cols="2" [gutterSize]="'15px'">
   <a href="/golive"
     ><mat-grid-tile class="grid-tile">
       <img
@@ -17,6 +17,5 @@
       />
 
       <h2>Track Your Bus</h2>
-    </mat-grid-tile></a
-  >
+    </mat-grid-tile></a>
 </mat-grid-list>
