--- a/src/app/golive/golive.component.html
+++ b/src/app/golive/golive.component.html
@@ -1,7 +1,7 @@
 
-
-  <div class="goliveContainer" (click)="shareLocation()" >
-    <div class="example-button-container example-button-container1">
+<app-login *ngIf="isLogin"></app-login>
+  <div *ngIf="!isLogin" class="goliveContainer" >
+    <div class="example-button-container example-button-container1" (click)="shareLocation()" >
         <button mat-fab color="accent" aria-label="Example icon button with a bookmark icon">
           <mat-icon> location_on</mat-icon>
         </button>
