--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -11,3 +11,9 @@
    width: 80%;
    padding: 5px;
 }
+form{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
